--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 html {
     height: 100vh;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -17,12 +20,11 @@ body {
         "sidebar content";
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 4fr;
-    border: solid 1px blue;
     min-width: 100%;   
 }
 
 .container > * {
-    border: solid 1px darkred;
+
 }
 
 /* HEADER */
@@ -38,12 +40,15 @@ body {
 }
 .search-bar {
     grid-area: search-bar;
+    border: solid 1px red;
 }
 .user-info {
     grid-area: user-info;
+    border: solid 1px red;
 }
 .buttons {
     grid-area: buttons;
+    border: solid 1px red;
 }
 
 /* SIDEBAR */
@@ -59,6 +64,38 @@ body {
 
 .content {
     grid-area: content;
+    display: grid;
+    grid-template-areas:
+        "projects announcements"
+        "projects trending";
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 2.5fr 1fr;
+}
+.project-container {
+    grid-area: projects;
+    border: solid 1px red;
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
 
 }
+.project {
+    margin: 1em;
 
+    border-left: solid 4px rgb(185, 43, 0);
+    border-radius: 15px;
+    box-shadow: 6px 4px 5px 1px rgb(107, 107, 107);
+    background-color: rgb(255, 255, 255);
+    min-height: 200px;
+    max-width: 400px;
+
+}
+.announcements {
+    grid-area: announcements;
+    border: solid 1px red;
+}
+.trending {
+    grid-area: trending;
+    border: solid 1px red;
+}
