--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+.ubuntu-regular {
+    font-family: "Ubuntu", serif;
+    font-weight: 400;
+    font-style: normal;
+  }  
 
 html {
     height: 100vh;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Ubuntu';
+    
 }
 
 body {
-    background-color: rgb(192, 95, 57);
     margin: 0px;
     display: flex;
     justify-content: space-between;
     min-height: 100%;
+    
 }
 
 .container {
@@ -18,37 +23,81 @@ body {
     grid-template-areas:
         "sidebar header"
         "sidebar content";
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 6fr;
     grid-template-rows: 1fr 4fr;
     min-width: 100%;   
-}
-
-.container > * {
+    background: linear-gradient(rgb(153, 175, 187), rgb(37, 62, 78));
 
 }
 
 /* HEADER */
 
 .header {
+
     grid-area: header;
     display: grid;
     grid-template-areas:
         "search-bar search-bar"
         "user-info buttons";
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 60px 1fr;
     grid-template-columns: 1fr 1fr;
+    padding-left: 12px;
+    border-radius: 0 0 0 20px;
 }
 .search-bar {
     grid-area: search-bar;
-    border: solid 1px red;
+    align-items: center;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
 }
+.search {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+input[type="text"] {
+    width: 500px;
+    height: 20px;
+    background-color: rgb(234, 240, 247);
+    border-style: none;
+    border-radius: 10px;
+    text-indent: 10px;
+    
+}
+.user {
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+    font-size: larger;
+    font-weight: bold;
+    font-style: italic;
+}
+
 .user-info {
     grid-area: user-info;
-    border: solid 1px red;
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
 .buttons {
     grid-area: buttons;
-    border: solid 1px red;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    place-content: center;
+    align-items: center;
+}
+.buttons > button[type="button"] {
+    height: 35px;
+    width: 100px;
+    background-color: rgb(27, 64, 107);
+    border-style: none;
+    border-radius: 20px;
+    color: white;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 /* SIDEBAR */
@@ -57,7 +106,29 @@ body {
     grid-area: sidebar;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 10fr;
+    grid-template-rows: max-content auto;
+
+}
+.logo {
+    font-size: 25px;
+    margin: 20px;
+    height: 50px;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    place-items: center;
+    gap: 10px;
+}
+.menu {
+    height: max-content;
+}
+
+.menu li {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    place-items: center;
+    gap: 10px;
 }
 
 /* CONTENT */
@@ -68,12 +139,15 @@ body {
     grid-template-areas:
         "projects announcements"
         "projects trending";
-        grid-template-rows: 1fr 1fr;
-        grid-template-columns: 2.5fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 2.5fr 1fr;
+    background: linear-gradient(90deg, rgb(43, 54, 65) 0%, rgb(222, 242, 255) 100%);
+    border-radius: 40px 0 0 0;
 }
+
+
 .project-container {
     grid-area: projects;
-    border: solid 1px red;
     display: grid;
     grid-gap: 1em;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -82,20 +156,26 @@ body {
 }
 .project {
     margin: 1em;
-
-    border-left: solid 4px rgb(185, 43, 0);
+    padding: 12px;
+    border-left: solid 4px rgb(0, 0, 0);
     border-radius: 15px;
     box-shadow: 6px 4px 5px 1px rgb(107, 107, 107);
     background-color: rgb(255, 255, 255);
     min-height: 200px;
     max-width: 400px;
-
+    font-size: 12px;
+}
+.project > h1 {
+    font-size: 20px;
+}
+.project > img {
+    
 }
 .announcements {
     grid-area: announcements;
-    border: solid 1px red;
+    border: solid 1px rgb(145, 145, 145);
 }
 .trending {
     grid-area: trending;
-    border: solid 1px red;
+    border: solid 1px rgb(139, 139, 139);
 }
