--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
         "sidebar header"
         "sidebar content";
     grid-template-columns: 1fr 6fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: min-content 1fr;
     min-width: 100%;   
     background: linear-gradient(rgb(153, 175, 187), rgb(37, 62, 78));
 
@@ -74,7 +74,10 @@ input[type="text"] {
     font-weight: bold;
     font-style: italic;
 }
-
+.user p:hover {
+    color: white;
+    font-weight: bold;
+}
 .user-info {
     grid-area: user-info;
     display: flex;
@@ -99,6 +102,12 @@ input[type="text"] {
     font-weight: bold;
     font-size: 14px;
 }
+.buttons > button:hover {
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    background-color: aliceblue;
+}
+
 
 /* SIDEBAR */
 
@@ -130,6 +139,10 @@ input[type="text"] {
     place-items: center;
     gap: 10px;
 }
+.menu li:hover {
+    font-weight: bold;
+    color:rgb(255, 255, 255);
+}
 
 /* CONTENT */
 
@@ -139,43 +152,80 @@ input[type="text"] {
     grid-template-areas:
         "projects announcements"
         "projects trending";
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 2.5fr 1fr;
-    background: linear-gradient(90deg, rgb(43, 54, 65) 0%, rgb(222, 242, 255) 100%);
+    grid-template-rows: min-content 1fr;
+    grid-template-columns: 3fr 1fr;
+    background: linear-gradient(90deg, rgb(43, 54, 65) 0%, rgba(255, 16, 16, 0) 100%);
     border-radius: 40px 0 0 0;
+    border: solid 1px red;
+
 }
 
 
 .project-container {
     grid-area: projects;
     display: grid;
-    grid-gap: 1em;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-
+    grid-gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    margin: 10px 20px 20px 10px;
+    border: solid 1px red;
 
 }
 .project {
     margin: 1em;
-    padding: 12px;
-    border-left: solid 4px rgb(0, 0, 0);
-    border-radius: 15px;
-    box-shadow: 6px 4px 5px 1px rgb(107, 107, 107);
+    padding: 10px;
+    border-left: solid 4px rgb(36, 177, 202);
+    border-radius: 12%;
+    box-shadow: 9px 6px 6px 1px rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
     min-height: 200px;
+    max-height: 400px;
+    min-width: 220px;
     max-width: 400px;
     font-size: 12px;
+    padding-top: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 14px;
 }
 .project > h1 {
     font-size: 20px;
 }
-.project > img {
-    
+.icons {
+    text-align: right;
 }
+
 .announcements {
+
     grid-area: announcements;
-    border: solid 1px rgb(145, 145, 145);
+    padding-left: 20px;
+    border: solid 1px red;
+
+}
+.announcements > div {
+    border-radius: 5%;
+    background-color:rgba(161, 200, 245, 0.521);
+    min-height: min-content;
+    min-width: 200px;
+    max-width: 280px;
+    padding: 5px 20px 5px 20px;
+    font-size: 12px;
+    place-content: center;
+    align-items: start;
 }
 .trending {
     grid-area: trending;
-    border: solid 1px rgb(139, 139, 139);
+    padding-left: 20px;
+    bottom: 50px;
+    border: solid 1px red;
+
+}
+.trending > div {
+    border-radius: 5%;
+    background-color:rgba(161, 200, 245, 0.521);
+    min-height: 160px;
+    min-width: 200px;
+    max-width: 280px;
+    padding: 10px;
+
 }
