--- a/style.css
+++ b/style.css
@@ -2,12 +2,11 @@
     font-family: "Ubuntu", serif;
     font-weight: 400;
     font-style: normal;
-  }  
+}  
 
 html {
     height: 100vh;
     font-family: 'Ubuntu';
-    
 }
 
 body {
@@ -15,7 +14,6 @@ body {
     display: flex;
     justify-content: space-between;
     min-height: 100%;
-    
 }
 
 .container {
@@ -27,13 +25,11 @@ body {
     grid-template-rows: min-content 1fr;
     min-width: 100%;   
     background: linear-gradient(rgb(153, 175, 187), rgb(37, 62, 78));
-
 }
 
 /* HEADER */
 
 .header {
-
     grid-area: header;
     display: grid;
     grid-template-areas:
@@ -42,7 +38,7 @@ body {
     grid-template-rows: 60px 1fr;
     grid-template-columns: 1fr 1fr;
     padding-left: 12px;
-    border-radius: 0 0 0 20px;
+    height: 150px;
 }
 .search-bar {
     grid-area: search-bar;
@@ -62,7 +58,6 @@ input[type="text"] {
     border-style: none;
     border-radius: 10px;
     text-indent: 10px;
-    
 }
 .user {
     padding: 10px;
@@ -116,7 +111,6 @@ input[type="text"] {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: max-content auto;
-
 }
 .logo {
     font-size: 25px;
@@ -153,22 +147,16 @@ input[type="text"] {
         "projects announcements"
         "projects trending";
     grid-template-rows: min-content 1fr;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3.5fr 1fr;
     background: linear-gradient(90deg, rgb(43, 54, 65) 0%, rgba(255, 16, 16, 0) 100%);
     border-radius: 40px 0 0 0;
-    border: solid 1px red;
-
 }
-
-
 .project-container {
     grid-area: projects;
     display: grid;
     grid-gap: 30px;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     margin: 10px 20px 20px 10px;
-    border: solid 1px red;
-
 }
 .project {
     margin: 1em;
@@ -194,20 +182,16 @@ input[type="text"] {
 .icons {
     text-align: right;
 }
-
 .announcements {
-
     grid-area: announcements;
-    padding-left: 20px;
-    border: solid 1px red;
-
+    padding: 0 15px 0 15px;
+    align-content: start;
+    font-weight: 100;
 }
 .announcements > div {
     border-radius: 5%;
     background-color:rgba(161, 200, 245, 0.521);
     min-height: min-content;
-    min-width: 200px;
-    max-width: 280px;
     padding: 5px 20px 5px 20px;
     font-size: 12px;
     place-content: center;
@@ -215,17 +199,38 @@ input[type="text"] {
 }
 .trending {
     grid-area: trending;
-    padding-left: 20px;
+    padding: 0 15px 0 15px;
     bottom: 50px;
-    border: solid 1px red;
-
 }
-.trending > div {
+.trend-container {
     border-radius: 5%;
     background-color:rgba(161, 200, 245, 0.521);
-    min-height: 160px;
-    min-width: 200px;
-    max-width: 280px;
-    padding: 10px;
-
+    min-height: min-content;
+    place-content: center;
+    align-items: center;
+    display: grid;
+    grid-template-rows: repeat(4, minmax(0, 1fr));
+    padding: 5px;
+}
+.topic {
+    display: grid;
+    grid-template: repeat(2, min-content) / 1fr 3fr;
+}
+.topic p:first-of-type {
+    font-size: 11px;
+    align-self: end;
+    grid-area: 1 / 2 / 2 / 3;
+    margin-bottom: 0;
+}
+.topic p:last-of-type {
+    font-size: 12px;
+    color: rgb(41, 41, 41);
+    grid-area: 2 / 2 / 3 / 3;
+    align-self: start;
+    margin-top: 0;
+}
+.topic img {
+    align-self: center;
+    justify-self: center;
+    grid-area: 1 / 1 / 3 / 2;
 }
