--- a/style.css
+++ b/style.css
@@ -210,11 +210,11 @@ input[type="text"] {
     align-items: center;
     display: grid;
     grid-template-rows: repeat(4, minmax(0, 1fr));
-    padding: 5px;
+    padding: 5px 20px 5px 10px;
 }
 .topic {
     display: grid;
-    grid-template: repeat(2, min-content) / 1fr 3fr;
+    grid-template: repeat(2, min-content) / 1fr 4fr;
 }
 .topic p:first-of-type {
     font-size: 11px;
